crates/oxc_react_compiler/tests/snapshots/array-map-noAlias-escaping-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/array-map-noAlias-escaping-function.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	const f = _temp;
	let t0;
	if ($[0] !== props.items) {
		const x = [...props.items].map(f);
		t0 = [x, f];
		$[0] = props.items;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
function _temp(item) {
	return item;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ items: [{ id: 1 }] }],
	isComponent: false
};
