crates/oxc_react_compiler/tests/snapshots/array-spread-mutable-iterator.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/array-spread-mutable-iterator.js
---
import { c as _c } from "react/compiler-runtime";
/**
* TODO: object spreads should have conditionally mutate semantics
*   Found differences in evaluator results
*   Non-forget (expected):
*   (kind: ok) [3,1,5,4]
*   [3,1,5,4]
*   [4,1,5,4]
*   Forget:
*   (kind: ok) [3,1,5,4]
*   [3,1,5,4]
*   [4]
*/
function useBar(t0) {
	"use memo";
	const $ = _c(2);
	const { arg } = t0;
	let t1;
	if ($[0] !== arg) {
		const s = new Set([
			1,
			5,
			4
		]);
		const mutableIterator = s.values();
		t1 = [arg, ...mutableIterator];
		$[0] = arg;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useBar,
	params: [{ arg: 3 }],
	sequentialRenders: [
		{ arg: 3 },
		{ arg: 3 },
		{ arg: 4 }
	]
};
