crates/oxc_react_compiler/tests/snapshots/arrow-function-one-line-directive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/arrow-function-one-line-directive.js
---
function useFoo() {
	const update = _temp;
	return update;
}
function _temp() {
	"worklet";
	return 1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [],
	isComponent: false
};
